--- a/app/stylesheets/sass/modules/_m-header.sass
+++ b/app/stylesheets/sass/modules/_m-header.sass
@@ -1,7 +1,6 @@
 .m-header
   width: 100%
   background-color: #f53d3d
-  overflow: hidden
   +media($mobile)
     text-align: center
 
